--- a/sample-pre.2/app/views/index.scala.html
+++ b/sample-pre.2/app/views/index.scala.html
@@ -7,8 +7,8 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.8.2.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/handlebars-1.0.rc.1.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/ember-1.0.0-pre.2.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/templates.pre.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/app-pre2.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("templates/templates.pre.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/app.js")" type="text/javascript"></script>
     </head>
     <body>
     </body>
