Made release version 1.5.1

--- a/sample-1.5.1/app/assets/templates/application.handlebars
+++ b/sample-1.5.1/app/assets/templates/application.handlebars
@@ -1,4 +1,4 @@
 <div>
-    Ember 1.5.0 Main template, including an inner one
+    Ember 1.5.1 Main template, including an inner template:
     {{view templateName='sub/sub'}}
 </div>
